Added sonatype oss server publishing configuration and related plugins for javadoc and source jars.

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.ac.bolton</groupId>
 	<artifactId>spaws</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SPAWS</name>
+	<packaging>jar</packaging>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>scottbw</id>
+			<name>Scott Wilson</name>
+			<email>scott.bradley.wilson@gmail.com</email>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
@@ -19,13 +41,52 @@
 		</dependency>
 	</dependencies>
 
+	<url>https://github.com/scottbw/spaws</url>
 	<scm>
-		<connection>scm:git:https://github.com/scottbw/spaws</connection>
-		<developerConnection>scm:git:https://github.com/scottbw/spaws</developerConnection>
-		<url>scm:git:git://github.com/scottbw/spaws.git</url>
+		<connection>scm:git:git@github.com:scottbw/spaws.git</connection>
+		<developerConnection>scm:git:git@github.com:scottbw/spaws.git</developerConnection>
+		<url>git@github.com:scottbw/spaws.git</url>
 	</scm>
+
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
